Project

General

Profile

Actions

Bug #16561

closed

FAILED assert(object_no < m_object_map.size())

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Steps to reproduce:
1. clone a large image
2. create a snapshot on the clone
3. shrink the clone twice

The semi-recent addition of deep-flatten incorrectly computes the copy-up region using the largest parent overlap. Since the first shrink would have handled the copy-up for the trimmed region, always use the most recent parent overlap. Using the snapshot's overlap will result in an attempt to go beyond the current object map.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16593: jewel: FAILED assert(object_no < m_object_map.size())ResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Description updated (diff)
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #16593: jewel: FAILED assert(object_no < m_object_map.size()) added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF