librbd: failed assertion after shrinking a clone image twice

Fixes: http://tracker.ceph.com/issues/16561
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 34d2297eed040f694b4d1c5e2606af04752c9e1a)